# scCCA

./: .flake8  README.md  README.rst  api.html  genindex.html  index.html  models.html  objects.inv  plots.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: branch.yaml  release.yaml
_sources/: api.rst.txt  index.rst.txt  models.rst.txt  plots.rst.txt
_sources/notebooks/: PBMC5K.ipynb.txt  kang.ipynb.txt
docs/: api.rst  conf.py  index.rst  plots.rst
docs/notebooks/: PBMC5K.ipynb  kang.ipynb
notebooks/: PBMC5K.html  PBMC5K.ipynb  kang.html  kang.ipynb
scCCA/: __init__.py  cca.py  data.py  model.py  pca.py
scCCA/plots/: __init__.py  cluster_enrichment.py  data_matrix.py  design_matrix.py  factor_embedding.py  factor_enrichment.py  loadings_bar.py  loadings_heatmap.py  loadings_scatter.py  loadings_state.py  qc.py  utils.py
scCCA/train/: __init__.py  handler.py  local_handler.py  settings.py
scCCA/utils/: __init__.py  data.py  design.py  gsea.py  scanpy.py
tests/: conftest.py  test_data.py  test_plot_utils.py  test_scanpy.py
