[tool.poetry]
name = "scCCA"
version = "0.1.0"
description = "Single cell canonical correlation analysis."
authors = ["Harald Vohringer"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
