[tool.poetry]
name = "scCCA"
packages = [
    { include = "scCCA" },
]
version = "0.3.1"
description = "Single cell canonical correlation analysis."
authors = ["Harald Vohringer"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
scanpy = ">=1.8.2"
pyro-ppl = ">=1.8.0"
Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
nbsphinx = { version = "0.8.9", optional = true }
jupyter = {version = "*", optional = true}
adjusttext = "^0.7.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.2"
bandit = "^1.7.4"
safety = "^2.3.5"
flake8 = "^6.0.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "nbsphinx"]
notebook = ["jupyter"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
force-exclude = """
scCCA/model.py
"""